# rust-barcode-detector

./: .gitignore  Cargo.toml  DockerFile  Dockerfile  docker-compose.yml
docker/: init-database.sh
src/: main.rs
src/functions/: getFile.rs
