[package]
name = "rust-barcode-detector"
version = "0.1.0"
authors = ["Tu Nombre <glozicky@gmail.com>"]
edition = "2021"

[dependencies]
rocket-multipart-form-data = "0.5.0"

rocket = { version = "0.5.0-rc.2", features = ["json"], default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
opencv = { version = "0.60.0" }